--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ul>
           <li id="trackX"></li>
           <li id="trackY"></li>
+          <li><button id="btnRect">Rectangle</button></li>
         </ul>
       </nav>
       <main></main>
