--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
           <li id="trackX"></li>
           <li id="trackY"></li>
           <li><button id="btnRect">Rectangle</button></li>
+          <li><button id="btnLine">Line</button></li>
+          <li><button id="btnCircle">Circle</button></li>
+          <li><button id="btnPath">Path</button></li>
         </ul>
       </nav>
       <main></main>
