Added the ability to set stroke colors

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
           <li><button id="btnLine">Line</button></li>
           <li><button id="btnCircle">Circle</button></li>
           <li><button id="btnPath">Path</button></li>
+
+          <li>
+            <label for="strokeColor">Stroke</label>
+            <input type="color" id="strokeColor">
+            <br>
+            <input type="checkbox" id="randStrokeColor">
+            <label for="randStrokeColor">Random Stroke</label>
+          </li>
+
         </ul>
       </nav>
       <main></main>
