Triangle and fill color lab

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><button id="btnLine">Line</button></li>
           <li><button id="btnCircle">Circle</button></li>
           <li><button id="btnPath">Path</button></li>
+          <li><button id="btnTriangle">Triangle</button></li>
 
           <li>
             <label for="strokeColor">Stroke</label>
@@ -25,6 +26,14 @@
             <br>
             <input type="checkbox" id="randStrokeColor">
             <label for="randStrokeColor">Random Stroke</label>
+          </li>
+
+          <li>
+            <label for="fillColor">Fill</label>
+            <input type="color" id="fillColor">
+            <br>
+            <input type="checkbox" id="randFillColor">
+            <label for="randFillColor">Random Fill</label>
           </li>
 
         </ul>
