Added 3-point and stack examples

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><button id="btnCircle">Circle</button></li>
           <li><button id="btnPath">Path</button></li>
           <li><button id="btnTriangle">Triangle</button></li>
+          <li><button id="btn3Point">3 Point</button></li>
 
           <li>
             <label for="strokeColor">Stroke</label>
@@ -41,7 +42,7 @@
       <main></main>
     </div>
 
-    <script src="./dist/js/main.min.js"></script>
+    <script src="./dist/js/main.js"></script>
 
   </body>
 </html>
