--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <li><button id="btnPath">Path</button></li>
           <li><button id="btnTriangle">Triangle</button></li>
           <li><button id="btn3Point">3 Point</button></li>
+          <li><button id="btnClear">Clear</button></li>
+          <li><button id="btnRedraw">Redraw</button></li>
 
           <li>
             <label for="strokeColor">Stroke</label>
